static_library("netboxglobal_call") {
  sources = [
    "netbox_error_codes.h",
    "wallet_http_call_signature.cc",
    "wallet_http_call_signature.h",
    "wallet_request.cc",
    "wallet_request.h",
    "wallet_tab_handler.h",
  ]

  deps = [
    "//base",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//services/network/public/proto",
    "//services/network:network_service",
    "//third_party/blink/public:blink_headers",
    "//third_party/blink/public/common",
    "//url",
  ]
}